# slack-cli

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser-dev.yml  .goreleaser.yml  .licenserc.yml  .typos.toml  CHANGELOG.txt  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  go.mod  go.sum  main.go
.circleci/: config.yml
.claude/: CLAUDE.md  settings.json
.cursor-notepads/: command-flags.md  ramp-up.md
.cursor/rules/: add-license-headers.mdc  always-add-license-headers.mdc  always-ask-before-starting.mdc  always-recommend-test-updates.mdc  avoid-scope-creep.mdc  cleanup-after-changes.mdc  confirm-before-changes.mdc  explicit-backward-compatibility.mdc  recommend-test-updates.mdc
.githooks/: pre-commit
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS_GUIDE.md  STYLE_GUIDE.md  cli-sdk-specification.md  dependabot.yml  issue_template.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 00-question.yml  01-bug.yml  01_question.md  02-feature.yml  02_enhancement.md  (+4 more)
cmd/: root.go  root_test.go
docker/: Dockerfile.node  Dockerfile.python
docs/: _sidebar.json  errors.md  index.md  metadata.json  sidebar.js
scripts/: archive-test.sh  archive.sh  install-dev-test.sh  install-dev.sh  install-test.sh  install-windows-dev.ps1  install-windows.ps1  install.sh
test/testdata/: manifest-app-name.js  manifest-app-name.json  manifest-app-name.ts  manifest-sdk-app-name.ts  manifest-sdk.ts  manifest.js  manifest.json  manifest.ts  package-app-name.json  package.json  pyproject-app-name.toml  pyproject.toml  testdata.go
(+791 files in other folders)
